[package]
name = "battery-monitor-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
battery = "0.7.8"
clap = { version = "4.0.13", features = ["derive"] }
gethostname = "0.3.0"
rumqttc = "0.17.0"
serde = {version = "1.0.145", features = ["derive"]}
serde_json = "1.0.86"
tokio = {version="1.21.2", features = ["full"]}
